tests/unchecked_node_module_vs_lib/unchecked_node_module_vs_lib.exp
Error ------------------------------------------------------------ test.js:12:18

Error: test.js:12
 12: var b: boolean = buffer.INSPECT_MAX_BYTES; // error, number ~/> boolean
                      ^^^^^^^^^^^^^^^^^^^^^^^^ Cannot assign `buffer.INSPECT_MAX_BYTES` to `b` because number [1] is incompatible with boolean [2].
  References:
  118:   declare var INSPECT_MAX_BYTES: number;
                                        ^^^^^^ [1]: number. See lib: <BUILTINS>/node.js:118
   12: var b: boolean = buffer.INSPECT_MAX_BYTES; // error, number ~/> boolean
              ^^^^^^^ [2]: boolean

Error ------------------------------------------------------------ test.js:22:23

Error: test.js:22
 22: var buffer2 = require("./buffer");
                           ^^^^^^^^^^ Cannot resolve module `./buffer`.

Error ------------------------------------------------------------ test.js:25:23

Error: test.js:25
 25: var buffer3 = require("./buffer.js");
                           ^^^^^^^^^^^^^ Cannot resolve module `./buffer.js`.


Found 3 errors
